--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
     "react": "^16.8.6",
