reorganize Stock schema and install pg-promise

--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
+    "pg": "^7.10.0",
+    "pg-promise": "^8.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
