--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server --open",
     "server": "node server.js",
     "db:setup": "node database-mysqldb/seed.js",
+    "mongoose:connect": "node databases/database-mongoose/mongoConnection.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -61,7 +62,11 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "fast-csv": "^2.4.1",
     "lodash": "^4.17.11",
+    "mongoose": "^5.5.3",
+    "mongoose-seed": "^0.6.0",
+    "mongoose-seed-csv": "0.0.3",
     "mysql2": "^1.6.5",
     "pg": "^7.10.0",
     "pg-promise": "^8.6.5",
