--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "webpack",
     "start": "webpack-dev-server --open",
     "server": "node server.js",
-    "db:setup": "node database-mysqldb/seed.js",
+    "db:setup": "node database-postgres/seed.js",
     "mongoose:connect": "node databases/database-mongoose/mongoConnection.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -60,6 +60,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "fast-csv": "^2.4.1",
@@ -75,6 +76,6 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "request": "^2.88.0",
-    "sequelize": "^5.2.3"
+    "sequelize": "^5.7.4"
   }
 }
