--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "express-static-gzip": "^1.1.3",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
     "nodemon": "^1.18.10",
+    "pg-copy-streams": "^2.2.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
@@ -63,7 +65,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
-    "fast-csv": "^2.4.1",
+    "fast-csv": "^2.5.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.3",
     "mongoose-seed": "^0.6.0",
