--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
     "csv-loader": "^3.0.2",
+    "csv-parser": "^2.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.3",
