--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "webpack",
     "start": "webpack-dev-server --open",
     "server": "node server.js",
-    "db:setup": "node database-mysqldb/seed.js",
+    "db:setup": "node database-postgres/seed.js",
     "mongoose:connect": "node databases/database-mongoose/mongoConnection.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -38,17 +38,20 @@
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
     "csv-loader": "^3.0.2",
+    "csv-parser": "^2.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "express-static-gzip": "^1.1.3",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
     "nodemon": "^1.18.10",
+    "pg-copy-streams": "^2.2.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
@@ -60,9 +63,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
-    "fast-csv": "^2.4.1",
+    "fast-csv": "^2.5.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.3",
     "mongoose-seed": "^0.6.0",
@@ -75,6 +79,6 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "request": "^2.88.0",
-    "sequelize": "^5.2.3"
+    "sequelize": "^5.7.4"
   }
 }
