--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mongoose": "^5.5.3",
     "mongoose-seed": "^0.6.0",
     "mongoose-seed-csv": "0.0.3",
+    "mongoose-sequence": "^5.0.1",
     "mysql2": "^1.6.5",
     "pg": "^7.10.0",
     "pg-promise": "^8.6.5",
