--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "webpack",
     "start": "webpack-dev-server --open",
     "server": "node server.js",
-    "db:setup": "node database-mysqldb/seed.js",
+    "db:seed": "psql -U MyFolder -d stocks -a -f /Users/MyFolder/SDC/buysell/database-postgres/importCSV.sql",
+    "mongoose:connect": "node databases/database-mongoose/mongoConnection.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -59,17 +60,23 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "fast-csv": "^2.4.1",
     "lodash": "^4.17.11",
+    "mongoose": "^5.5.3",
+    "mongoose-seed": "^0.6.0",
+    "mongoose-seed-csv": "0.0.3",
     "mysql2": "^1.6.5",
     "pg": "^7.10.0",
+    "pg-copy-streams": "^2.2.0",
     "pg-promise": "^8.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "request": "^2.88.0",
-    "sequelize": "^5.2.3"
+    "sequelize": "^5.7.4"
   }
 }
