--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "watch": "webpack",
+    "dev:build": "npm start && npm run server",
     "start": "webpack-dev-server --open",
-    "server": "node server.js",
+    "server": "nodemon server/server.js",
     "db:seed": "psql -U MyFolder -d stocks -a -f /Users/MyFolder/SDC/buysell/database-postgres/importCSV.sql",
     "mongoose:connect": "node databases/database-mongoose/mongoConnection.js",
     "test": "jest",
@@ -65,12 +66,14 @@
     "faker": "^4.1.0",
     "fast-csv": "^2.4.1",
     "lodash": "^4.17.11",
+    "make-runnable": "^1.3.6",
     "mongoose": "^5.5.3",
     "mongoose-seed": "^0.6.0",
     "mongoose-seed-csv": "0.0.3",
     "mysql2": "^1.6.5",
     "pg": "^7.10.0",
     "pg-copy-streams": "^2.2.0",
+    "pg-pool": "^2.0.6",
     "pg-promise": "^8.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
