--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express-static-gzip": "^1.1.3",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
