--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "watch": "webpack",
     "start": "webpack-dev-server --open",
-    "server": "node server.js",
-    "db:seed": "psql -U MyFolder -d stocks -a -f /Users/MyFolder/SDC/buysell/database-postgres/importCSV.sql",
-    "mongoose:connect": "node databases/database-mongoose/mongoConnection.js",
+    "server": "nodemon server/index.js",
+    "db:setup": "node database-mysqldb/seed.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -48,6 +47,7 @@
     "express-static-gzip": "^1.1.3",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
@@ -60,23 +60,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "dotenv": "^7.0.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "faker": "^4.1.0",
-    "fast-csv": "^2.4.1",
+    "express-promise-router": "^3.0.3",
     "lodash": "^4.17.11",
-    "mongoose": "^5.5.3",
-    "mongoose-seed": "^0.6.0",
-    "mongoose-seed-csv": "0.0.3",
     "mysql2": "^1.6.5",
+    "newrelic": "^5.7.0",
     "pg": "^7.10.0",
-    "pg-copy-streams": "^2.2.0",
-    "pg-promise": "^8.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "request": "^2.88.0",
-    "sequelize": "^5.7.4"
+    "sequelize": "^5.2.3"
   }
 }
