--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "webpack",
     "start": "webpack-dev-server --open",
     "server": "nodemon server/index.js",
-    "db:setup": "node database-mysqldb/seed.js",
+    "db:setup": "node database/seed/seed.js",
+    "db:postgres": "psql -U MyFolder -d stocks -a -f /Users/MyFolder/SDC/buysell/database-postgres/importCSV.sql",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -45,10 +46,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "express-static-gzip": "^1.1.3",
+    "faker": "^4.1.0",
+    "fast-csv": "^2.5.0",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
+    "pg-copy-streams": "^2.2.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
