--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "sequelize": "^5.2.3"
   }
