--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "watch": "webpack",
     "start": "webpack-dev-server --open",
-    "server": "nodemon server/index.js",
-    "db:setup": "node database-mysqldb/seed.js",
+    "server": "node server/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -46,6 +45,7 @@
     "eslint-plugin-react": "^7.12.4",
     "express-static-gzip": "^1.1.3",
     "file-loader": "^3.0.1",
+    "grunt": "^1.0.4",
     "jest": "^24.5.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
@@ -61,9 +61,12 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
     "faker": "^4.1.0",
+    "grunt-aws": "^0.7.1",
+    "grunt-webpack": "^3.1.3",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
     "newrelic": "^5.7.0",
